[project]
name = "airtrail-flightera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "fastapi>=0.128.0",
    "lxml>=6.0.2",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "webdriver-manager>=4.0.2",
]
